; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-abort.c_callback_func.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-abort.c_callback_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"Abort run!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32******** (i32********, i32********, i32*********, i32*********)* @callback_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32******** @callback_func(i32******** %0, i32******** %1, i32********* %2, i32********* %3) #0 {
  %5 = alloca i32********, align 8
  %6 = alloca i32********, align 8
  %7 = alloca i32*********, align 8
  %8 = alloca i32*********, align 8
  %9 = alloca i32********, align 8
  store i32******** %0, i32********* %5, align 8
  store i32******** %1, i32********* %6, align 8
  store i32********* %2, i32********** %7, align 8
  store i32********* %3, i32********** %8, align 8
  %10 = load i32********, i32********* %5, align 8
  %11 = bitcast i32******** %10 to i32*********
  %12 = call i32 @JERRY_UNUSED(i32********* %11)
  %13 = load i32********, i32********* %6, align 8
  %14 = bitcast i32******** %13 to i32*********
  %15 = call i32 @JERRY_UNUSED(i32********* %14)
  %16 = load i32*********, i32********** %7, align 8
  %17 = call i32 @JERRY_UNUSED(i32********* %16)
  %18 = load i32*********, i32********** %8, align 8
  %19 = call i32 @JERRY_UNUSED(i32********* %18)
  %20 = call i32************ @jerry_create_string(i32* bitcast ([11 x i8]* @.str to i32*))
  %21 = bitcast i32************ %20 to i32********
  store i32******** %21, i32********* %9, align 8
  %22 = load i32********, i32********* %9, align 8
  %23 = call i32************ @jerry_create_abort_from_value(i32******** %22, i32 1)
  %24 = bitcast i32************ %23 to i32********
  store i32******** %24, i32********* %9, align 8
  %25 = load i32********, i32********* %9, align 8
  ret i32******** %25
}

declare dso_local i32 @JERRY_UNUSED(i32*********) #1

declare dso_local i32************ @jerry_create_string(i32*) #1

declare dso_local i32************ @jerry_create_abort_from_value(i32********, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
